--- a/.github/workflows/deploy-to-cloudron.yaml
+++ b/.github/workflows/deploy-to-cloudron.yaml
@@ -5,6 +5,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: my.cloudron.dev
     steps:
       - name: Cloudron Push to App
         uses: cloudron-io/cloudron-push-to-app@latest
