--- a/.github/workflows/deploy-to-cloudron.yaml
+++ b/.github/workflows/deploy-to-cloudron.yaml
@@ -15,4 +15,4 @@ jobs:
           CLOUDRON_TOKEN: "${{ secrets.CLOUDRON_URL }}"
           CLOUDRON_APP_ID: "${{ secrets.CLOUDRON_APP_ID }}"
           CLOUDRON_URL: "${{ secrets.CLOUDRON_TOKEN }}"
-          CLOUDRON_PUSH_DESTINATION: "/app/data/public/"
+          CLOUDRON_PUSH_DESTINATION: "/app/data/public"
