--- a/.github/workflows/deploy-to-cloudron.yaml
+++ b/.github/workflows/deploy-to-cloudron.yaml
@@ -14,8 +14,8 @@ jobs:
       - name: Cloudron Push to App
         uses: cloudron-io/cloudron-push-to-app@latest
         with:
-          CLOUDRON_URL: "${{ secrets.CLOUDRON_TOKEN }}"
-          CLOUDRON_TOKEN: "${{ secrets.CLOUDRON_URL }}"
+          CLOUDRON_FQDN: "${{ secrets.CLOUDRON_FQDN }}"
+          CLOUDRON_TOKEN: "${{ secrets.CLOUDRON_TOKEN }}"
           CLOUDRON_APP_ID: "${{ secrets.CLOUDRON_APP_ID }}"
           CLOUDRON_PUSH_DESTINATION: "/app/data/public"
           CLOUDRON_CREATE_APP_BACKUP: "true"
