--- a/.github/workflows/deploy-to-my-demo-cloudron-io.yaml
+++ b/.github/workflows/deploy-to-my-demo-cloudron-io.yaml
@@ -16,8 +16,8 @@ jobs:
           # DANGER: These values are cleartext for demo purposes only. NEVER do this in production! Use GitHub Secrets instead.
           # DANGER: With this API token, anyone can fully control your Cloudron instance!
           # INFO: This TOKEN is only valid until the my.demo.cloudron.io instance is reset.
-          CLOUDRON_FQDN: "0d8117263fbd8a91db1069440f0b06921950e0a7df29c107727391aff921db45"
-          CLOUDRON_TOKEN: "my.demo.cloudron.io"
+          CLOUDRON_FQDN: "my.demo.cloudron.io"
+          CLOUDRON_TOKEN: "0d8117263fbd8a91db1069440f0b06921950e0a7df29c107727391aff921db45"
           CLOUDRON_APP_ID: "a5eeeaf8-e754-41d8-8d91-d99272e4afa9"
           CLOUDRON_PUSH_DESTINATION: "/app/data/public"
-          CLOUDRON_CREATE_APP_BACKUP: "false"
+          CLOUDRON_CREATE_APP_BACKUP: "true"
